# LawAssisstance

./: .env.example  .gitignore  AUTHENTICATION_TEST_RESULTS.md  DEPLOYMENT_SUCCESS.md  MENTOR_CODE_ANALYSIS.md  PHASE_1_COMPLETE.md  PHASE_1_COMPLETE_STATUS.md  PROJECT_STATUS_REPORT.md  QUICK_START.md  README.md  README_NEW.md  README_OLD.md  branch-comparison.md  docker-compose.yml  immigration-law-api-tests.http  index.html  package-lock.json  package.json  test-credentials.md  test_server.py  vite.config.js
.github/: copilot-instructions.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: users.py
apps/api/app/core/: config.py
apps/api/app/schemas/: user.py
backend/: .env  .env.example  Immigration_Law_Dashboard_API.postman_collection.json  README.md  SQL_SERVER_SETUP.md  __init__.py  check_data.py  check_schema.py  check_tables.py  create_sample_data.py  create_sample_data_new.py  database_setup.md  generate_postman_collection.py  list_endpoints.py  quick_server.py  requirements.txt  run_server.py  run_simple_server.py  setup_sqlserver.py  start_server.bat  start_server.ps1  test_connection.py
backend/app/: database.py  main.py  main_simple.py  schemas.py
backend/scripts/: init_db.py  test_backend.py
docs/: API_DOCUMENTATION.md  ERD_DIAGRAM.md  README.md  api-documentation.html  api-documentation.md  database-erd.html  database-erd.md
public/: index.html
src/: App.js
src/components/: DashboardStats.js  RecentActivity.js  Sidebar.js  Sidebar_bootstrap.js  UpcomingDeadlines.js
src/context/: AuthContext.js
(+48 files in other folders)
