[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lawassistance-api"
version = "0.1.0"
description = "FastAPI backend for LawAssistance"
dependencies = [
  "fastapi>=0.95",
  "uvicorn[standard]>=0.20",
  "sqlalchemy>=1.4",
  "alembic>=1.9",
  "pydantic>=1.10",
  "psycopg2-binary>=2.9"
]
